busybox - usrmerge 1 sbin

--- a/busybox.yaml
+++ b/busybox.yaml
@@ -1,12 +1,15 @@
 package:
   name: busybox
   version: 1.37.0
-  epoch: 0
+  epoch: 20
   description: "swiss-army knife for embedded systems"
   copyright:
     - license: GPL-2.0-only
   dependencies:
     provider-priority: 10
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
   scriptlets:
     trigger:
       paths:
@@ -58,20 +61,16 @@ pipeline:
 
   - name: Install
     runs: |
-      mkdir -p "${{targets.destdir}}"/usr/sbin
-      mkdir -p "${{targets.destdir}}"/usr/bin
-      mkdir -p "${{targets.destdir}}"/tmp
-      mkdir -p "${{targets.destdir}}"/var/cache/misc
       mkdir -p "${{targets.destdir}}"/bin
-      mkdir -p "${{targets.destdir}}"/sbin
-      mkdir -p "${{targets.destdir}}"/etc
-      mkdir -p "${{targets.destdir}}"/usr/share/man/man1
-      chmod 1777 "${{targets.destdir}}"/tmp
+      mkdir -p "${{targets.destdir}}"/usr/bin
+      mkdir -p "${{targets.destdir}}"/usr/sbin
+      mkdir -p "${{targets.destdir}}"/etc/busybox-paths.d
       install -m755 busybox "${{targets.destdir}}"/bin/busybox
       install -m644 securetty "${{targets.destdir}}"/etc/securetty
-
-      mkdir -p "${{targets.destdir}}"/etc/busybox-paths.d
       ./busybox --list-path > "${{targets.destdir}}"/etc/busybox-paths.d/busybox
+
+      # sbin merge
+      sed 's|^sbin|usr/bin|' -i "${{targets.destdir}}"/etc/busybox-paths.d/busybox
 
 subpackages:
   - name: busybox-full
@@ -79,6 +78,9 @@ subpackages:
       provides:
         - busybox=${{package.full-version}}
       provider-priority: 5
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
     options:
       no-commands: true
     pipeline:
@@ -89,20 +91,16 @@ subpackages:
           make CC="${{host.triplet.gnu}}-gcc" V=1 -j$(nproc)
       - name: Install
         runs: |
-          mkdir -p "${{targets.subpkgdir}}"/usr/sbin
-          mkdir -p "${{targets.subpkgdir}}"/usr/bin
-          mkdir -p "${{targets.subpkgdir}}"/tmp
-          mkdir -p "${{targets.subpkgdir}}"/var/cache/misc
           mkdir -p "${{targets.subpkgdir}}"/bin
-          mkdir -p "${{targets.subpkgdir}}"/sbin
-          mkdir -p "${{targets.subpkgdir}}"/etc
-          mkdir -p "${{targets.subpkgdir}}"/usr/share/man/man1
-          chmod 1777 "${{targets.subpkgdir}}"/tmp
+          mkdir -p "${{targets.subpkgdir}}"/usr/bin
+          mkdir -p "${{targets.destdir}}"/usr/sbin
+          mkdir -p "${{targets.subpkgdir}}"/etc/busybox-paths.d
           install -m755 busybox "${{targets.subpkgdir}}"/bin/busybox
           install -m644 securetty "${{targets.subpkgdir}}"/etc/securetty
-
-          mkdir -p "${{targets.subpkgdir}}"/etc/busybox-paths.d
           ./busybox --list-path > "${{targets.subpkgdir}}"/etc/busybox-paths.d/busybox-full
+
+          # sbin merge
+          sed 's|^sbin|usr/bin|' -i "${{targets.subpkgdir}}"/etc/busybox-paths.d/busybox-full
     scriptlets:
       trigger:
         paths:
