busybox - usrmerge 2 bin

--- a/busybox.yaml
+++ b/busybox.yaml
@@ -1,13 +1,14 @@
 package:
   name: busybox
   version: 1.37.0
-  epoch: 20
+  epoch: 30
   description: "swiss-army knife for embedded systems"
   copyright:
     - license: GPL-2.0-only
   dependencies:
     provider-priority: 10
     runtime:
+      - merged-bin
       - merged-sbin
       - wolfi-baselayout
   scriptlets:
@@ -18,8 +19,8 @@ package:
         - /usr/bin
         - /usr/sbin
       script: |
-        #!/bin/busybox sh
-        /bin/busybox --install -s
+        #!/usr/bin/busybox sh
+        /usr/bin/busybox --install -s
 
 var-transforms:
   - from: ${{package.version}}
@@ -61,16 +62,17 @@ pipeline:
 
   - name: Install
     runs: |
-      mkdir -p "${{targets.destdir}}"/bin
-      mkdir -p "${{targets.destdir}}"/usr/bin
       mkdir -p "${{targets.destdir}}"/usr/sbin
+      mkdir -p "${{targets.destdir}}"/usr/bin
       mkdir -p "${{targets.destdir}}"/etc/busybox-paths.d
-      install -m755 busybox "${{targets.destdir}}"/bin/busybox
+      install -m755 busybox "${{targets.destdir}}"/usr/bin/busybox
       install -m644 securetty "${{targets.destdir}}"/etc/securetty
       ./busybox --list-path > "${{targets.destdir}}"/etc/busybox-paths.d/busybox
 
       # sbin merge
       sed 's|^sbin|usr/bin|' -i "${{targets.destdir}}"/etc/busybox-paths.d/busybox
+      # bin merge
+      sed 's|^bin|usr/bin|' -i "${{targets.destdir}}"/etc/busybox-paths.d/busybox
 
 subpackages:
   - name: busybox-full
@@ -80,6 +82,7 @@ subpackages:
       provider-priority: 5
       runtime:
         - merged-sbin
+        - merged-bin
         - wolfi-baselayout
     options:
       no-commands: true
@@ -91,16 +94,17 @@ subpackages:
           make CC="${{host.triplet.gnu}}-gcc" V=1 -j$(nproc)
       - name: Install
         runs: |
-          mkdir -p "${{targets.subpkgdir}}"/bin
+          mkdir -p "${{targets.subpkgdir}}"/usr/sbin
           mkdir -p "${{targets.subpkgdir}}"/usr/bin
-          mkdir -p "${{targets.destdir}}"/usr/sbin
           mkdir -p "${{targets.subpkgdir}}"/etc/busybox-paths.d
-          install -m755 busybox "${{targets.subpkgdir}}"/bin/busybox
+          install -m755 busybox "${{targets.subpkgdir}}"/usr/bin/busybox
           install -m644 securetty "${{targets.subpkgdir}}"/etc/securetty
           ./busybox --list-path > "${{targets.subpkgdir}}"/etc/busybox-paths.d/busybox-full
 
           # sbin merge
           sed 's|^sbin|usr/bin|' -i "${{targets.subpkgdir}}"/etc/busybox-paths.d/busybox-full
+          # bin merge
+          sed 's|^bin|usr/bin|' -i "${{targets.subpkgdir}}"/etc/busybox-paths.d/busybox-full
     scriptlets:
       trigger:
         paths:
@@ -109,8 +113,8 @@ subpackages:
           - /usr/bin
           - /usr/sbin
         script: |
-          #!/bin/busybox sh
-          /bin/busybox --install -s
+          #!/usr/bin/busybox sh
+          /usr/bin/busybox --install -s
     test:
       environment:
         contents:
@@ -122,7 +126,7 @@ subpackages:
             busybox --list-full >full.txt
             # These programs are expected to be present
             for p in nc netcat wget; do
-                if ! grep "bin/$p" full.txt; then
+                if ! grep "usr/bin/$p" full.txt; then
                     echo "$p is not present in busybox --list-full output"
                     exit 1
                 fi
@@ -141,7 +145,7 @@ test:
 
         # These programs have been intentionally removed from default busybox
         for p in nc netcat wget; do
-            if grep "bin/$p" full.txt; then
+            if grep "usr/bin/$p" full.txt; then
                 echo "Found '$p' in list-full output"
                 exit 1
             fi
