--- a/openbao.yaml
+++ b/openbao.yaml
@@ -1,10 +1,14 @@
 package:
   name: openbao
   version: "2.1.1"
-  epoch: 2
+  epoch: 30
   description: OpenBao exists to provide a software solution to manage, store, and distribute sensitive data including secrets, certificates, and keys.
   copyright:
     - license: MPL-2.0
+  dependencies:
+    runtime:
+      - merged-bin
+      - wolfi-baselayout
 
 # NOTE: openbao UI is not enabled for now ; see https://github.com/openbao/openbao/issues/129
 # several sections need to be uncommented to embed UI in the tool
