refactored to use conditional statements and cherry-pick pipeline

--- a/opensearch-dashboards-2.yaml
+++ b/opensearch-dashboards-2.yaml
@@ -125,17 +125,20 @@ subpackages:
       - runs: |
           rm -r plugins/* || true
       - uses: git-checkout
+        if: "'${{range.value}}' == 'reportsDashboards'"
+        with:
+          repository: https://github.com/opensearch-project/${{range.key}}.git
+          branch: 2.19
+          destination: ./plugins/${{range.value}}
+          cherry-picks: |
+            2.19/3ad10434bd83591588476a057b8eacc5739f7882: required to bump jspdf to 3.0, fixes CVE-2025-26791
+      - uses: git-checkout
         with:
           repository: https://github.com/opensearch-project/${{range.key}}.git
           tag: ${{package.version}}.0
           destination: ./plugins/${{range.value}}
       - runs: |
           cd ./plugins/${{range.value}}
-          # fixes CVE-2025-26791 by bumping dompurify dependency definitions
-          if [ ${{range.value}} = "reportsDashboards" ]
-          then
-            git fetch origin 2.19 && git cherry-pick 3ad10434bd83591588476a057b8eacc5739f7882
-          fi
 
           # Downgrade cypress version to 12.17.4 if this is securityDashboard due to upstream problem:
           # ERROR [single_version_dependencies] Multiple version ranges for the same dependency were found declared across different package.json files.
