changed from branch checkout branch to tags

--- a/opensearch-dashboards-2.yaml
+++ b/opensearch-dashboards-2.yaml
@@ -128,7 +128,7 @@ subpackages:
         if: "'${{range.value}}' == 'reportsDashboards'"
         with:
           repository: https://github.com/opensearch-project/${{range.key}}.git
-          branch: 2.19
+          tag: ${{package.version}}.0
           destination: ./plugins/${{range.value}}
           cherry-picks: |
             2.19/3ad10434bd83591588476a057b8eacc5739f7882: required to bump jspdf to 3.0, fixes CVE-2025-26791
