chore(chromium): Disable debug symbols for blink
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/chromium.yaml
+++ b/chromium.yaml
@@ -1,5 +1,6 @@
 #nolint:git-checkout-must-use-github-updates
 # Note: To produce a debug build of Chromium, pass these options to gn:
+#  blink_symbol_level=2
 #  is_debug=true
 #  is_official_build=false
 #  symbol_level=2
@@ -238,6 +239,7 @@ pipeline:
 
       # Generate config: takes about 30 minutes
       time gn gen /home/src/out/Default --args="
+        blink_symbol_level=0
         clang_use_chrome_plugins=false
         chrome_pgo_phase=0
         enable_nacl=false
