chore(chromium): Enable Selenium test
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/chromium.yaml
+++ b/chromium.yaml
@@ -350,27 +350,27 @@ test:
     contents:
       packages:
         - grep
-        - posix-libc-utils
-        - libnss
-        #- py3-pip
-        #- python3
+        - py3-pip
+        - python3
   pipeline:
-    - runs: |
-        # Make sure Chrome and ChromeDriver are at the correct path
-        test -x /usr/lib/chromium/chrome
-        test -x /usr/lib/chromium/chromedriver
+    - name: Check for lang pack
+      runs: |
         test -f /usr/lib/chromium/locales/en-US.pak
-
+    - name: Check status page
+      runs: |
         # Check status with new headless mode
         chromium --no-sandbox --headless --disable-gpu --dump-dom https://www.chromestatus.com
 
         # Test wrapper
         CHROMIUM_USER_FLAGS="--no-sandbox --headless --disable-gpu --dump-dom" chromium-browser https://www.chromestatus.com
-
+    - name: Test ChromeDriver with Selenium
+      runs:
         # Test ChromeDriver functionality
         # Disable ChromeDriver test until py3-selenium has been packaged
-        #pip3 install selenium
-        #python3 ./test-chromedriver.py
+        pip3 install selenium
+        python3 ./test-chromedriver.py
+    - name: Version/help check
+      runs: |
         chromedriver --version
         chromedriver --help
         chromium --version
