feat(chromium): Use our rust
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/chromium.yaml
+++ b/chromium.yaml
@@ -122,6 +122,7 @@ environment:
       - qt5-qtbase-dev
       - qt6-qtbase-dev
       - rust
+      - rust-bindgen
       - samurai
       - speex-dev
       - sqlite-dev
@@ -131,6 +132,9 @@ environment:
       - xz
       - zlib-dev
       - zstd-dev
+  environment:
+    # Allow unstable rust features with stable rust
+    RUSTC_BOOTSTRAP: 1
 
 pipeline:
   - uses: git-checkout
@@ -242,10 +246,11 @@ pipeline:
         blink_symbol_level=0
         clang_use_chrome_plugins=false
         chrome_pgo_phase=0
+        enable_freetype=true
         enable_nacl=false
         enable_nocompile_tests_new=false
+        enable_rust=true
         enable_widevine=true
-        enable_freetype=true
         ffmpeg_branding=\"Chrome\"
         icu_use_data_file=false
         is_debug=false
@@ -253,6 +258,9 @@ pipeline:
         link_pulseaudio=true
         moc_qt6_path=\"/usr/lib/qt6/libexec\"
         proprietary_codecs=true
+        rustc_version=\"$(rustc --version)\"
+        rust_bindgen_root=\"/usr\"
+        rust_sysroot_absolute=\"/usr\"
         safe_browsing_use_unrar=false
         symbol_level=0
         treat_warnings_as_errors=false
