aws-cli-2: Enable test/ldd-check
Add several runtime deps.

Closes: #40833

Signed-off-by: Sergio Durigan Junior <sergiodj@chainguard.dev>

--- a/aws-cli-2.yaml
+++ b/aws-cli-2.yaml
@@ -3,7 +3,7 @@
 package:
   name: aws-cli-2
   version: "2.24.16"
-  epoch: 0
+  epoch: 1
   description: "Universal Command Line Interface for Amazon Web Services (v2)"
   copyright:
     - license: Apache-2.0
@@ -16,6 +16,12 @@ package:
       - aws-cli=${{package.full-version}}
     runtime:
       - groff-base
+      - libbz2-1
+      - libexpat1
+      - libffi
+      - mpdecimal
+      - sqlite-libs
+      - xz
       - zlib
 
 environment:
@@ -59,6 +65,9 @@ pipeline:
 
 test:
   pipeline:
+    - uses: test/ldd-check
+      with:
+        packages: ${{package.name}}
     - name: Verify aws-cli-v2 installation
       runs: |
         aws --version || exit 1
