changed structure of git-checkouts to delete plugin files properly

--- a/opensearch-dashboards-2.yaml
+++ b/opensearch-dashboards-2.yaml
@@ -125,18 +125,18 @@ subpackages:
       - runs: |
           rm -r plugins/* || true
       - uses: git-checkout
-        if: "'${{range.value}}' == 'reportsDashboards'"
+        with:
+          repository: https://github.com/opensearch-project/${{range.key}}.git
+          tag: ${{package.version}}.0
+          destination: ./plugins/${{range.value}}
+      - if: "'${{range.value}}' == 'reportsDashboards'"
+        uses: git-checkout
         with:
           repository: https://github.com/opensearch-project/${{range.key}}.git
           tag: ${{package.version}}.0
           destination: ./plugins/${{range.value}}
           cherry-picks: |
             2.19/3ad10434bd83591588476a057b8eacc5739f7882: required to bump jspdf to 3.0, fixes CVE-2025-26791
-      - uses: git-checkout
-        with:
-          repository: https://github.com/opensearch-project/${{range.key}}.git
-          tag: ${{package.version}}.0
-          destination: ./plugins/${{range.value}}
       - runs: |
           cd ./plugins/${{range.value}}
 
