--- a/airflow.yaml
+++ b/airflow.yaml
@@ -1,7 +1,7 @@
 package:
   name: airflow
   version: "2.10.5"
-  epoch: 1
+  epoch: 2
   description: Platform to programmatically author, schedule, and monitor workflows
   options:
     #  There is a dependency on libarrow.so although it
@@ -11,6 +11,9 @@ package:
   dependencies:
     runtime:
       - coreutils # numfmt is required
+      - keyutils-dev
+      - libudev
+      - mariadb-connector-c
       - netcat-openbsd # nc is required
       - posix-libc-utils # genconf is required
       - python-3.12
@@ -144,6 +147,9 @@ test:
       packages:
         - python3
   pipeline:
+    - uses: test/ldd-check
+      with:
+        packages: ${{package.name}}
     - runs: |
         export PATH=/opt/airflow/bin:$PATH
         export PYTHONPATH=/opt/airflow/lib/python3.12/site-packages
