feat(chromium): Use our Java
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/chromium.yaml
+++ b/chromium.yaml
@@ -48,6 +48,7 @@ environment:
       - dav1d-dev
       - dbus-dev
       - dbus-glib-dev
+      - default-jdk
       - double-conversion-dev
       - elfutils
       - elfutils-dev
@@ -200,7 +201,7 @@ pipeline:
           -delete
       done
 
-      # Update GN configuration to use system libraries
+      # Update gn configuration to use system libraries
       python3 build/linux/unbundle/replace_gn_files.py --system-libraries $system_libs
       python3 third_party/libaddressinput/chromium/tools/update-strings.py
 
@@ -210,10 +211,13 @@ pipeline:
 
       # Use host node
       mkdir -p third_party/node/linux/node-linux-x64/bin
-      ln -sv /usr/bin/node third_party/node/linux/node-linux-x64/bin/node
+      ln -s /usr/bin/node third_party/node/linux/node-linux-x64/bin/node
 
-  - working-directory: /home/src
-    name: prepare-build
+      # Use host java
+      mkdir -p third_party/jdk/current/bin
+      ln -s /usr/bin/java third_party/jdk/current/bin/java
+
+  - name: Generate gn config
     runs: |
       # Generate config: takes about 30 minutes
       time gn gen $HOME/out/Default --args="
@@ -261,7 +265,7 @@ pipeline:
       time autoninja -C ./out/Default chrome chromedriver.unstripped chrome_crashpad_handler chrome_sandbox
 
   - working-directory: /home/build/out/Default
-    name: Install the binaries and libraries
+    name: Install binaries & libraries
     runs: |
       mkdir -p \
         ${{targets.contextdir}}/usr/bin \
