chore(chromium): yam
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/chromium.yaml
+++ b/chromium.yaml
@@ -371,9 +371,7 @@ test:
         # Test wrapper
         CHROMIUM_USER_FLAGS="--no-sandbox --headless --disable-gpu --dump-dom" chromium-browser https://www.chromestatus.com
     - name: Test ChromeDriver with Selenium
-      runs:
-        # Test ChromeDriver functionality
-        # Disable ChromeDriver test until py3-selenium has been packaged
+      runs: |
         pip3 install selenium
         python3 ./test-chromedriver.py
     - name: Version/help check
