fix(chromium): Almost forgot nodejs
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/chromium.yaml
+++ b/chromium.yaml
@@ -110,6 +110,7 @@ environment:
       - mesa-dev
       - minizip
       - nghttp2-dev
+      - nodejs
       - openh264-dev
       - opus-dev
       - pango
