fix(chromium): And lld...

--- a/chromium.yaml
+++ b/chromium.yaml
@@ -106,6 +106,7 @@ environment:
       - libxtst
       - libxtst-dev
       - linux-headers
+      - lld
       - llvm-dev
       - mesa-dev
       - minizip
