Refactor hydra; use go/build (#43509)
refactors hydra pkg

---------

Signed-off-by: anushkamittal20 <anushka.mittal@chainguard.dev>

--- a/hydra.yaml
+++ b/hydra.yaml
@@ -1,20 +1,10 @@
 package:
   name: hydra
   version: 2.3.0
-  epoch: 1
+  epoch: 2
   description: OpenID Certified OAuth 2.0 Server and OpenID Connect Provider
   copyright:
     - license: Apache-2.0
-
-environment:
-  contents:
-    packages:
-      - build-base
-      - busybox
-      - ca-certificates-bundle
-      - go
-  environment:
-    CGO_ENABLED: "1" # Needed for SQLite support
 
 pipeline:
   - uses: git-checkout
@@ -28,10 +18,14 @@ pipeline:
       deps: |-
         github.com/go-jose/go-jose/v3@v3.0.4
 
-  - uses: go/install
+  - uses: go/build
     with:
-      package: .
-      ldflags: -X 'github.com/ory/hydra/v2/driver/config.Version=$(git describe --abbrev=0 --tags)' -X 'github.com/ory/hydra/v2/driver/config.Date=$(TZ=UTC date -u "+%Y-%m-%dT%H:%M:%SZ")' -X 'github.com/ory/hydra/v2/driver/config.Commit=$(git rev-parse HEAD)'
+      packages: .
+      output: hydra
+      ldflags: |
+        -X 'github.com/ory/hydra/v2/driver/config.Version=$(git describe --abbrev=0 --tags)'
+        -X 'github.com/ory/hydra/v2/driver/config.Date=$(TZ=UTC date -u "+%Y-%m-%dT%H:%M:%SZ")'
+        -X 'github.com/ory/hydra/v2/driver/config.Commit=$(git rev-parse HEAD)'
       tags: sqlite,json1,hsm
 
 update:
@@ -45,16 +39,27 @@ update:
 
 test:
   environment:
+    environment:
+      DSN: memory
     contents:
       packages:
         - curl
   pipeline:
     - runs: |
         set -ex
-        /usr/bin/hydra version
+        /usr/bin/hydra version | grep ${{package.version}}
         /usr/bin/hydra help
-        export DSN=memory
         /usr/bin/hydra migrate sql up -e --yes
-        /usr/bin/hydra serve all --dev &
-        sleep 5
-        curl -s http://localhost:4444/health/alive | grep '"status":"ok"'
+    - name: "Start server and test"
+      uses: test/daemon-check-output
+      with:
+        start: /usr/bin/hydra serve all --dev
+        timeout: "30"
+        expected_output: |
+          DSN is memory
+          running migration
+          networks applied successfully
+          client applied successfully
+          Thank you for using Ory Hydra
+        post: |
+          curl -s http://localhost:4444/health/alive
