--- a/postgresql-17-bitnami-compat.yaml
+++ b/postgresql-17-bitnami-compat.yaml
@@ -1,7 +1,7 @@
 package:
   name: postgresql-17-bitnami-compat
   version: "17.0"
-  epoch: 1
+  epoch: 2
   description: "compat package with postgresql image"
   copyright:
     - license: BSD-3-Clause
@@ -19,7 +19,9 @@ package:
 environment:
   contents:
     packages:
+      - bash
       - busybox
+      - net-tools
       - postgresql-17-base
 
 pipeline:
@@ -46,7 +48,7 @@ pipeline:
 
       # Use package path while unpacking
       find . -iname "*.sh" -exec sed 's#/opt/bitnami#${{targets.contextdir}}/opt/bitnami#g' -i {} \;
-        ${{targets.contextdir}}/opt/bitnami/scripts/postgresql/postunpack.sh || true
+        ${{targets.contextdir}}/opt/bitnami/scripts/postgresql/postunpack.sh
       # Restore path
       find ${{targets.contextdir}}/opt/bitnami -type f -exec sed 's#${{targets.contextdir}}##g' -i {} \;
 
