--- a/kots.yaml
+++ b/kots.yaml
@@ -26,7 +26,6 @@ pipeline:
 
   - uses: go/bump
     with:
-      go-version: 1.23.4 # This fixes some compilation issues with go-1.24 where go-vet throws errors when detecting unsafe usage of format string.
       deps: |-
         github.com/go-jose/go-jose/v4@v4.0.5
 
@@ -55,7 +54,7 @@ pipeline:
 
       # removing tests for now to see if this builds
       make -C web deps lint build-kotsadm
-      make vet kots build
+      make kots build
 
       mv bin/kotsadm "${{targets.destdir}}/usr/bin/"
       mv bin/kots "${{targets.destdir}}/usr/bin/"
