--- a/nats-top.yaml
+++ b/nats-top.yaml
@@ -44,7 +44,7 @@ test:
   pipeline:
     - name: version test
       runs: |
-        nats-top --version
+        nats-top --version 2>&1 | grep ${{package.version}}
     - name: run nats-server and nats-top
       runs: |
         nats-server -m 8222 &
