use go/covdata pipeline inside tests
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/nats-top.yaml
+++ b/nats-top.yaml
@@ -51,3 +51,4 @@ test:
         sleep 2
         nats-top -o nats-top-output
         cat nats-top-output | grep -Ei 'server|bytes|sec'
+    - uses: go/covdata
