Add rsync depndency as it is required by the make setup
Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/semgrep.yaml
+++ b/semgrep.yaml
@@ -42,6 +42,7 @@ environment:
       - py3-wheel # used for py3-semgrep
       - python3 # used in make install
       - python3-dev
+      - rsync
       - wolfi-base
       - zlib-dev
 
@@ -53,10 +54,11 @@ pipeline:
       expected-commit: ffdd67f8d6c987c713a1b60732a3bdb65e07425e
       recurse-submodules: true
 
-  - runs: |
+  - name: Setup and build
+    runs: |
       # Setup OCaml and opam.
       rm -rf ~/.opam || true
-      # Initialize OPAM with specific compiler version
+      # Initialize OPAM with specific compiler version `vars.ocaml_version`
       opam init --bare --disable-sandboxing -y
 
       OPAMJOBS=1 opam switch create ${{vars.ocaml_version}} ocaml-base-compiler.${{vars.ocaml_version}} || {
