build with -cover and pass in envs during test
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/nats-top.yaml
+++ b/nats-top.yaml
@@ -17,6 +17,7 @@ pipeline:
     with:
       packages: ./nats-top.go
       output: nats-top
+      extra-args: -cover
       ldflags: |
         -X main.version=${{package.version}}
         -X main.commit=$(git rev-parse HEAD)
@@ -38,6 +39,8 @@ update:
 
 test:
   environment:
+    environment:
+      GOCOVERDIR: /home/build
     contents:
       packages:
         - nats-server
