datadog-agent: remove godebug tlskyber from go.mod
It was dropped in Go 1.24.

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -102,7 +102,7 @@ pipeline:
   # https://github.com/DataDog/datadog-agent/pull/31426
   - uses: patch
     with:
-      patches: revert-import-python-relatively-instead-of-using-the-patch.patch
+      patches: revert-import-python-relatively-instead-of-using-the-patch.patch remove-removed-godebug.patch
 
   # Ensure that we don't run into nvidia GPU issues at runtime.
   - runs: |
