chore(chromium): Disable Selenium tests again

--- a/chromium.yaml
+++ b/chromium.yaml
@@ -372,10 +372,10 @@ test:
 
         # Test wrapper
         CHROMIUM_USER_FLAGS="--no-sandbox --headless --disable-gpu --dump-dom" chromium-browser https://www.chromestatus.com
-    - name: Test ChromeDriver with Selenium
-      runs: |
-        pip3 install selenium
-        python3 ./test-chromedriver.py
+    #- name: Test ChromeDriver with Selenium
+    #  runs: |
+    #    pip3 install selenium
+    #    python3 ./test-chromedriver.py
     - name: Version/help check
       runs: |
         chromedriver --version
