wip: attempt build with our Bazel 7

--- a/selenium.yaml
+++ b/selenium.yaml
@@ -13,8 +13,7 @@ environment:
   contents:
     packages:
       - bash
-      - bazelisk
-      - bazelisk-default
+      - bazel-7
       - binutils
       - build-base
       - busybox
