--- a/minio.yaml
+++ b/minio.yaml
@@ -1,12 +1,7 @@
-# Set update to manual:true because we also need to verify the bitnami repo (https://github.com/bitnami/containers/tree/main/bitnami/minio)
-# for releases as you can see minio-bitnami-2025-compat is using hardcoded version-path: 2025/debian-12
-# till we have a way to track such subpackage updates in bitnami repo, we will keep it manual
-# Internal tracking issue here: https://github.com/chainguard-dev/internal-dev/issues/8397
-# For now, I have added a check to verify if the path exists in GitHub in subpackage pipeline
 package:
   name: minio
-  version: "0.20250203.210304"
-  epoch: 1
+  version: "0.20250218.162555"
+  epoch: 0
   description: Multi-Cloud Object Storage
   copyright:
     - license: AGPL-3.0-or-later
@@ -32,7 +27,7 @@ pipeline:
     with:
       repository: https://github.com/minio/minio
       tag: ${{vars.mangled-package-version}}
-      expected-commit: 712fe1a8dfd64bbc3fde1863cbbf55ae17e7c911
+      expected-commit: 90f5e1e5f62cbc47be6d0a3ca0634bfd84c2248c
 
   - uses: go/bump
     with:
@@ -56,7 +51,10 @@ subpackages:
           # Make sure we fail on any error
           set -e
 
-          # The path we need to check
+          # The path we need to check: we need this path for the following
+          # steps, so explicitly check for its presence: tracking issue for
+          # automation handling this case is
+          # https://github.com/chainguard-dev/internal-dev/issues/8397
           URL="https://github.com/bitnami/containers/tree/main/bitnami/minio/2025/debian-12"
 
           # Grab the HTTP status from the first line (e.g., "HTTP/2 200")
@@ -94,7 +92,6 @@ subpackages:
 
 update:
   enabled: true
-  manual: true
   version-transform:
     - match: ^RELEASE\.(\d{4})-(\d{2})-(\d{2})T(\d{2})-(\d{2})-(\d{2})Z$
       replace: 0.${1}${2}${3}.${4}${5}${6}
