fixes build failures, addresses CVEs
Signed-off-by: Kyle Steere <kyle.steere@chainguard.dev>

--- a/prism.yaml
+++ b/prism.yaml
@@ -1,6 +1,6 @@
 package:
   name: prism
-  version: 5.12.1
+  version: 5.12.0
   epoch: 0
   description: "A set of packages for API mocking and contract testing with OpenAPI v2 and OpenAPI v3.x"
   url: https://github.com/stoplightio/prism
@@ -31,24 +31,32 @@ environment:
 pipeline:
   - uses: git-checkout
     with:
-      expected-commit: 197eb6f9cc4067da6806c14a2919419624609e9a
+      expected-commit: 3772eabc5508cb1415bbdbcc8887dfa4d504f58b
       repository: https://github.com/stoplightio/prism
       tag: v${{package.version}}
   # The updated tspc compiler assumes typescript 5. Since prism uses typescript 4,
   # we add a compiler option to tsconfig.json to permit features that are deprecated in typescript 5.
   - uses: patch
     with:
-      patches: tsconfig.json.diff
+      patches: 0001-package-tsconfig-updates.patch
   # fix: error TS2353: Object literal may only specify known properties, and '__bundled__' does not exist in type 'JSONSchema6 | JSONSchema7'
   - uses: patch
     with:
       patches: json_schema.patch
+  # fix: build failures related to variable not being able to be assigned to http-proxy-agent
+  - uses: patch
+    with:
+      patches: 0001-updating-proxyAgent-for-unknown.patch
+  # fix: CVE-2024-4068 & jsonpath-plus 7.2.0
+  - uses: patch
+    with:
+      patches: 0001-updating-json-schema-faker-and-braces-versions.patch
   - runs: |
       # Create a top-level project directory to house our prism installation
       # See 'dependencies' build stage of prism/Dockerfile (https://github.com/stoplightio/prism/blob/master/Dockerfile)
 
       mkdir -p ${{targets.destdir}}/usr/src/prism/node_modules
-      cp package.json ${{targets.destdir}}/usr/src/prism/
+      cp package.json yarn.lock ${{targets.destdir}}/usr/src/prism/
 
       # Copy subpackages into the project directory
       for pkg in core http http-server cli
@@ -60,6 +68,10 @@ pipeline:
     runs: |
       # Install production dependencies for subpackages
       yarn --production
+
+      # fix CVEs CVE-2024-4068 & CVE-2024-21534
+      npm i --package-lock-only --force
+      npm audit fix --force
   - working-directory: /home/build/
   - runs: |
       # Build the project
