bitnami/compat: don't fetch all history when `commit` specified

--- a/pipelines/bitnami/compat.yaml
+++ b/pipelines/bitnami/compat.yaml
@@ -32,7 +32,7 @@ pipeline:
       cd ./bitnami-containers
 
       if [ ! -z ${{inputs.commit}} ]; then
-        git fetch --unshallow
+        git fetch --depth 1 origin ${{inputs.commit}}
         git checkout -f ${{inputs.commit}}
       fi
 
