Per dannf's recommendation, use var-transforms for the ruby version for licensee
Signed-off-by: Łukasz 'sil2100' Zemczak <lukasz.zemczak@chainguard.dev>

--- a/ruby3.4-licensee.yaml
+++ b/ruby3.4-licensee.yaml
@@ -7,12 +7,12 @@ package:
     - license: MIT
   dependencies:
     runtime:
-      - ruby-3.4
-      - ruby3.4-dotenv
-      - ruby3.4-octokit
-      - ruby3.4-reverse_markdown
-      - ruby3.4-rugged
-      - ruby3.4-thor
+      - ruby-${{vars.rubyMM}}
+      - ruby${{vars.rubyMM}}-dotenv
+      - ruby${{vars.rubyMM}}-octokit
+      - ruby${{vars.rubyMM}}-reverse_markdown
+      - ruby${{vars.rubyMM}}-rugged
+      - ruby${{vars.rubyMM}}-thor
 
 vars:
   gem: licensee
@@ -21,7 +21,7 @@ environment:
   contents:
     packages:
       - build-base
-      - ruby-3.4-dev
+      - ruby-${{vars.rubyMM}}-dev
 
 pipeline:
   - uses: git-checkout
@@ -48,6 +48,12 @@ update:
     strip-prefix: v
     use-tag: true
     tag-filter: v
+
+var-transforms:
+  - from: ${{package.name}}
+    match: ^ruby(\d\.\d+)-.*
+    replace: $1
+    to: rubyMM
 
 test:
   environment:
