--- a/mysql-9.1.yaml
+++ b/mysql-9.1.yaml
@@ -174,6 +174,10 @@ subpackages:
         contents:
           packages:
             - ${{package.name}}
+        environment:
+          BITNAMI_APP_NAME: mysql
+          MYSQL_ROOT_PASSWORD: UltraS3cure
+          PATH: "/opt/bitnami/mysql/bin:/opt/bitnami/common/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
       pipeline:
         - runs: |
             test -f /opt/bitnami/mysql/bin/mysql
@@ -184,6 +188,14 @@ subpackages:
             test -f /opt/bitnami/mysql/lib/plugin/component_reference_cache.so
             test -f /opt/bitnami/mysql/share/english/errmsg.sys
             test -f /opt/bitnami/mysql/share/${{package.name}}/english/errmsg.sys
+        - name: "Test entrypoint and run scripts"
+          uses: test/daemon-check-output
+          with:
+            start: /opt/bitnami/scripts/mysql/entrypoint.sh /opt/bitnami/scripts/mysql/run.sh
+            expected_output: |
+              Installing database
+              Configuring authentication
+              MySQL setup finished
 
 update:
   enabled: true
