feat: add mysqladmin post test

--- a/mysql-9.1.yaml
+++ b/mysql-9.1.yaml
@@ -178,6 +178,7 @@ subpackages:
           BITNAMI_APP_NAME: mysql
           MYSQL_ROOT_PASSWORD: UltraS3cure
           PATH: "/opt/bitnami/mysql/bin:/opt/bitnami/common/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+          MYSQL_HOME: "/opt/bitnami/mysql/conf"
       pipeline:
         - runs: |
             test -f /opt/bitnami/mysql/bin/mysql
@@ -192,6 +193,13 @@ subpackages:
           uses: test/daemon-check-output
           with:
             start: /opt/bitnami/scripts/mysql/entrypoint.sh /opt/bitnami/scripts/mysql/run.sh
+            post: |
+              set -e
+
+              /usr/bin/mysqladmin --user=root -p$MYSQL_ROOT_PASSWORD ping --wait=20
+              /opt/bitnami/mysql/bin/mysqladmin --user=root -p$MYSQL_ROOT_PASSWORD ping --wait=20
+              /usr/bin/mysqladmin --user=root -p$MYSQL_ROOT_PASSWORD -h127.0.0.1 ping --wait=20
+              /opt/bitnami/mysql/bin/mysqladmin --user=root -p$MYSQL_ROOT_PASSWORD -h127.0.0.1 ping --wait=20
             expected_output: |
               Installing database
               Configuring authentication
