--- a/iptables.yaml
+++ b/iptables.yaml
@@ -86,6 +86,10 @@ subpackages:
           setcap cap_net_raw,cap_net_admin+eip ${{targets.contextdir}}/usr/bin/xtables-legacy-multi
           setcap cap_net_raw,cap_net_admin+eip ${{targets.contextdir}}/usr/bin/xtables-nft-multi
     test:
+      environment:
+        contents:
+          packages:
+            - libcap-utils
       pipeline:
         - uses: test/ldd-check
           with:
