Add the ldd-check test to dhclient

--- a/dhclient.yaml
+++ b/dhclient.yaml
@@ -66,6 +66,9 @@ update:
 
 test:
   pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: ${{package.name}}
     - runs: |
         dhclient-script --version
         dhclient-script --help
