fix(chromium): Add Chromium's private libs to library path
Signed-off-by: RJ Sampson <rj.sampson@chainguard.dev>

--- a/chromium.yaml
+++ b/chromium.yaml
@@ -361,6 +361,8 @@ test:
         - grep
         - py3-pip
         - python3
+    environment:
+      LD_LIBRARY_PATH: "/usr/lib/chromium"
   pipeline:
     - name: Check for lang pack
       runs: |
