--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -580,6 +580,36 @@ subpackages:
             withstdinas version
             withstdinas help
 
+  - name: ${{package.name}}-service
+    description: "Systemd services for datadog-agent"
+    dependencies:
+      runtime:
+        - datadog-agent
+    pipeline:
+      - runs: |
+          set -x
+          
+          mkdir -p "${{targets.subpkgdir}}"/usr/lib/systemd/system/
+          mkdir -p "${{targets.subpkgdir}}"/usr/lib/systemd/system-preset/
+
+          for service in agent agent-trace agent-process agent-sysprobe agent-security; do
+            install -Dm644 ./pkg/fleet/installer/packages/embedded/datadog-"$service".service \
+              "${{targets.subpkgdir}}"/usr/lib/systemd/system/
+
+            sed -ri \
+              -e 's|/opt/datadog-packages/datadog-agent/stable/bin/agent/|/opt/datadog-agent/bin/agent/|' \
+              -e 's|/opt/datadog-packages/datadog-agent/stable/embedded/bin/|/opt/datadog-agent/embedded/bin/|' \
+              -e 's|/opt/datadog-packages/datadog-agent/stable/run/|/run/|' \
+              "${{targets.subpkgdir}}"/usr/lib/systemd/system/datadog-"$service".service;
+
+            # temporary workaround
+            sed -i "\|User=dd-agent|d" "${{targets.subpkgdir}}"/usr/lib/systemd/system/datadog-"$service".service;
+          done
+
+          #echo "datadog-agent-sysprobe.service" > "${{targets.subpkgdir}}/usr/lib/systemd/system-preset/80-datadog-agent.preset"
+          #echo "datadog-agent-process.service" > "${{targets.subpkgdir}}/usr/lib/systemd/system-preset/80-datadog-agent.preset"
+          echo "datadog-agent.service" > "${{targets.subpkgdir}}/usr/lib/systemd/system-preset/80-datadog-agent.preset"
+
 update:
   enabled: true
   github:
