--- a/acl.yaml
+++ b/acl.yaml
@@ -1,7 +1,7 @@
 package:
   name: acl
   version: 2.3.2
-  epoch: 5
+  epoch: 6
   description: "access control list utilities"
   copyright:
     - license: LGPL-2.1-or-later AND GPL-2.0-or-later
@@ -56,6 +56,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
   - name: "libacl1"
     description: "library for managing access control lists"
@@ -65,7 +68,7 @@ subpackages:
           mv "${{targets.destdir}}"/lib/libacl.so.* "${{targets.subpkgdir}}"/lib/
     test:
       pipeline:
-        - uses: test/ldd-check
+        - uses: test/tw/ldd-check
           with:
             packages: libacl1
 
