selenium, docker-selenium: bump openjdk to 21
Observed in latest upstream images:

```
 130 % docker run --rm -it --entrypoint java selenium/standalone-firefox:latest --version
 openjdk 21.0.6 2025-01-21
 OpenJDK Runtime Environment (build 21.0.6+7-Ubuntu-124.04.1)
 OpenJDK 64-Bit Server VM (build 21.0.6+7-Ubuntu-124.04.1, mixed mode, sharing)
```

Signed-off-by: dann frazier <dann.frazier@chainguard.dev>

--- a/docker-selenium.yaml
+++ b/docker-selenium.yaml
@@ -5,7 +5,7 @@ package:
   # 'package format error' when trying to install the package. The workaround is
   # to replace '-' with '.', then mangling the version to replace back.
   version: "4.29.0.20250222"
-  epoch: 1
+  epoch: 2
   description: Provides a simple way to run Selenium Grid with Chrome, Firefox, and Edge using Docker, making it easier to perform browser automation
   copyright:
     - license: Apache-2.0
@@ -33,12 +33,12 @@ environment:
       - git
       - gnupg
       - jq
-      - openjdk-17-default-jdk
+      - openjdk-${{vars.openjdk-version}}-default-jdk
       - openssl
       - x11vnc
       - yq
   environment:
-    JAVA_HOME: /usr/lib/jvm/java-17-openjdk
+    JAVA_HOME: /usr/lib/jvm/java-${{vars.openjdk-version}}-openjdk
     TC: UTC
     SEL_USER: seluser
     SEL_PASSWD: secret
@@ -49,6 +49,9 @@ var-transforms:
     match: ^(.+)\.(\d+)$
     replace: $1-$2
     to: mangled-package-version
+
+vars:
+  openjdk-version: 21
 
 pipeline:
   - uses: git-checkout
