--- a/selenium.yaml
+++ b/selenium.yaml
@@ -1,13 +1,16 @@
 package:
   name: selenium
   version: "4.28.0"
-  epoch: 1
+  epoch: 2
   description: A browser automation framework and ecosystem.
   copyright:
     - license: Apache-2.0
   dependencies:
     runtime:
-      - openjdk-17-default-jvm
+      - openjdk-${{vars.openjdk-version}}-default-jvm
+
+vars:
+  openjdk-version: 21
 
 environment:
   contents:
@@ -26,13 +29,13 @@ environment:
       - libbz2-1
       - liblz4-1
       - libzstd1
-      - openjdk-17-default-jdk
+      - openjdk-${{vars.openjdk-version}}-default-jdk
       - python3
       - ruby-3.3
       - tzdata
       - wolfi-baselayout
   environment:
-    JAVA_HOME: /usr/lib/jvm/java-17-openjdk
+    JAVA_HOME: /usr/lib/jvm/java-${{vars.openjdk-version}}-openjdk
 
 pipeline:
   - uses: git-checkout
@@ -61,7 +64,7 @@ subpackages:
     description: The Selenium Server is needed in order to run Remote Selenium WebDriver (Grid).
     dependencies:
       runtime:
-        - openjdk-17-default-jvm
+        - openjdk-${{vars.openjdk-version}}-default-jvm
     pipeline:
       - runs: |
           bazel build //java/src/org/openqa/selenium/grid:executable-grid
@@ -75,7 +78,7 @@ subpackages:
         contents:
           packages:
             - wolfi-base
-            - openjdk-17-default-jvm
+            - openjdk-${{vars.openjdk-version}}-default-jvm
       pipeline:
         - runs: |
             selenium-server-standalone info
@@ -86,7 +89,7 @@ subpackages:
     description: The Selenium Server is needed in order to run Remote Selenium WebDriver (Grid).
     dependencies:
       runtime:
-        - openjdk-17-default-jvm
+        - openjdk-${{vars.openjdk-version}}-default-jvm
     pipeline:
       - runs: |
           bazel build //java/src/org/openqa/selenium/grid:selenium_server_deploy.jar
@@ -100,7 +103,7 @@ subpackages:
         contents:
           packages:
             - wolfi-base
-            - openjdk-17-default-jvm
+            - openjdk-${{vars.openjdk-version}}-default-jvm
       pipeline:
         - runs: |
             java -jar /usr/bin/selenium-server
@@ -120,7 +123,7 @@ test:
   environment:
     contents:
       packages:
-        - openjdk-17-default-jvm
+        - openjdk-${{vars.openjdk-version}}-default-jvm
   pipeline:
     - runs: |
         selenium info
