Add the ldd-check test to hdf5

--- a/hdf5.yaml
+++ b/hdf5.yaml
@@ -2,7 +2,7 @@ package:
   name: hdf5
   description: Library for accessing Hierarchical Data Format version 5 files
   version: "1.14.6"
-  epoch: 0
+  epoch: 1
   url: https://www.hdfgroup.org/solutions/hdf5/
   copyright:
     - license: BSD-3-Clause
@@ -147,6 +147,12 @@ subpackages:
         - uses: test/ldd-check
           with:
             packages: $(basename ${{targets.contextdir}})
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: ${{package.name}}
 
 update:
   enabled: true
