--- a/hwloc.yaml
+++ b/hwloc.yaml
@@ -1,7 +1,7 @@
 package:
   name: hwloc
   version: "2.12.0"
-  epoch: 0
+  epoch: 1
   description: Portable abstraction of hierarchical hardware architectures
   copyright:
     - license: BSD-3-Clause
@@ -56,6 +56,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
   - name: hwloc-doc
     pipeline:
