--- a/gtest.yaml
+++ b/gtest.yaml
@@ -1,7 +1,7 @@
 package:
   name: gtest
   version: "1.16.0"
-  epoch: 0
+  epoch: 1
   description: Google Test - C++ testing utility based on the xUnit framework (like JUnit)
   copyright:
     - license: BSD-3-Clause
@@ -42,6 +42,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
   - name: gmock
     pipeline:
@@ -50,9 +53,15 @@ subpackages:
           mv "${{targets.destdir}}"/usr/lib/libgmock*.so* "${{targets.subpkgdir}}"/usr/lib/
     test:
       pipeline:
-        - uses: test/ldd-check
+        - uses: test/tw/ldd-check
           with:
-            packages: $(basename ${{targets.contextdir}})
+            packages: ${{subpkg.name}}
+
+test:
+  pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: ${{package.name}}
 
 update:
   enabled: true
