Add the ldd-check test to gstreamer

--- a/gstreamer.yaml
+++ b/gstreamer.yaml
@@ -2,7 +2,7 @@
 package:
   name: gstreamer
   version: "1.25.90"
-  epoch: 0
+  epoch: 1
   description: GStreamer streaming media framework
   copyright:
     - license: LGPL-2.0-or-later
@@ -62,6 +62,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
   - name: gstreamer-doc
     pipeline:
