--- a/gpsd.yaml
+++ b/gpsd.yaml
@@ -1,7 +1,7 @@
 package:
   name: gpsd
   version: "3.25"
-  epoch: 4
+  epoch: 5
   description: GPS daemon
   copyright:
     - license: BSD-2-Clause
@@ -60,6 +60,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
   - name: gpsd-doc
     pipeline:
@@ -127,6 +130,9 @@ update:
 
 test:
   pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: ${{package.name}}
     - runs: |
         gpsd --version
         gpsd --help
