bug: iptables-xtables-privileged was broken

--- a/iptables.yaml
+++ b/iptables.yaml
@@ -1,7 +1,7 @@
 package:
   name: iptables
   version: 1.8.11
-  epoch: 0
+  epoch: 1
   description: Linux kernel firewall, NAT and packet mangling tools
   copyright:
     - license: GPL-2.0-or-later
@@ -75,24 +75,30 @@ subpackages:
     description: iptables with cap_net_raw and cap_net_admin capabilities set for xtables
     options:
       no-provides: true
-    pipeline:
-      - runs: |
-          cp -r ${{targets.destdir}} ${{targets.contextdir}}
-          setcap cap_net_raw,cap_net_admin+eip ${{targets.contextdir}}/sbin/xtables-legacy-multi
-          setcap cap_net_raw,cap_net_admin+eip ${{targets.contextdir}}/sbin/xtables-nft-multi
+      no-commands: true
+    dependencies:
+      runtime:
+        - iptables
+        - libcap-utils
+    scriptlets:
+      pre-install: |
+        #!/bin/sh
+        echo "setting caps"
+        setcap cap_net_raw,cap_net_admin+eip /sbin/xtables-legacy-multi
+        setcap cap_net_raw,cap_net_admin+eip /sbin/xtables-nft-multi
+        echo "testing"
+        getcap /sbin/xtables-legacy-multi
+        echo "anything here?"
+      pre-deinstall: |
+        #!/bin/sh
+        setcap -r cap_net_raw,cap_net_admin+eip /sbin/xtables-legacy-multi
+        setcap -r cap_net_raw,cap_net_admin+eip /sbin/xtables-nft-multi
     test:
-      environment:
-        contents:
-          packages:
-            - libcap-utils
       pipeline:
-        - uses: test/ldd-check
-          with:
-            packages: $(basename ${{targets.contextdir}})
         - name: Test file capabilities
           runs: |
-            getcap /sbin/xtables-legacy-multi | cut -d ' ' -f2 | grep -q -E '^cap_net_raw,cap_net_admin+eip$'
-            getcap /sbin/xtables-nft-multi | cut -d ' ' -f2 | grep -q -E '^cap_net_raw,cap_net_admin+eip$'
+            getcap /sbin/xtables-legacy-multi | cut -d ' ' -f2 | grep -q -E '^cap_net_admin,cap_net_raw=eip$'
+            getcap /sbin/xtables-nft-multi | cut -d ' ' -f2 | grep -q -E '^cap_net_admin,cap_net_raw=eip$'
 
   - name: iptables-doc
     description: iptables documentation
