Add the ldd-check test to apr-util

--- a/apr-util.yaml
+++ b/apr-util.yaml
@@ -1,7 +1,7 @@
 package:
   name: apr-util
   version: 1.6.3
-  epoch: 4
+  epoch: 5
   description: The Apache Portable Runtime Utility Library
   copyright:
     # Some files also contain RSA-MD.
@@ -68,6 +68,9 @@ subpackages:
             apu-1-config --version
             apu-1-config --help
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
   - name: apr-util-dbd_pgsql
     pipeline:
@@ -99,6 +102,11 @@ subpackages:
           mkdir -p "${{targets.subpkgdir}}"/usr/lib
           mv "${{targets.destdir}}"/usr/lib/apr-util-1/apr_ldap* "${{targets.subpkgdir}}"/usr/lib
     description: The Apache Portable Runtime Utility Library - LDAP driver
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
 update:
   enabled: true
