fix: wip bitnami compat package

--- a/clickhouse-25.1.yaml
+++ b/clickhouse-25.1.yaml
@@ -19,8 +19,8 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
-      # - clang-19
-      - clang-19-dev
+      - clang-19
+      # - clang-19-dev
       - cmake
       - coreutils
       - findutils
@@ -58,6 +58,7 @@ pipeline:
         -DCMAKE_BUILD_TYPE=Release \
         -DNO_ARMV81_OR_HIGHER=1 \
         -DCMAKE_INSTALL_LIBDIR=lib \
+        -DCMAKE_CXX_FLAGS="-Wno-error=unused-result" \
         ..
 
   - runs: |
