--- a/iptables.yaml
+++ b/iptables.yaml
@@ -1,7 +1,7 @@
 package:
   name: iptables
   version: 1.8.11
-  epoch: 0
+  epoch: 1
   description: Linux kernel firewall, NAT and packet mangling tools
   copyright:
     - license: GPL-2.0-or-later
@@ -77,7 +77,7 @@ subpackages:
       no-provides: true
     pipeline:
       - runs: |
-          cp -r ${{targets.destdir}} ${{targets.contextdir}}
+          cp -r ${{targets.destdir}}/* ${{targets.contextdir}}
           setcap cap_net_raw,cap_net_admin+eip ${{targets.contextdir}}/sbin/xtables-legacy-multi
           setcap cap_net_raw,cap_net_admin+eip ${{targets.contextdir}}/sbin/xtables-nft-multi
     test:
@@ -91,8 +91,8 @@ subpackages:
             packages: $(basename ${{targets.contextdir}})
         - name: Test file capabilities
           runs: |
-            getcap /sbin/xtables-legacy-multi | cut -d ' ' -f2 | grep -q -E '^cap_net_raw,cap_net_admin+eip$'
-            getcap /sbin/xtables-nft-multi | cut -d ' ' -f2 | grep -q -E '^cap_net_raw,cap_net_admin+eip$'
+            getcap /sbin/xtables-legacy-multi | cut -d ' ' -f2 | grep -q -E '^cap_net_admin,cap_net_raw=eip$'
+            getcap /sbin/xtables-nft-multi | cut -d ' ' -f2 | grep -q -E '^cap_net_admin,cap_net_raw=eip$'
 
   - name: iptables-doc
     description: iptables documentation
