add bitnami-compat package to alertmanager
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

symlink config and amtool as well

Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

remove usage of bitnami/compat

Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

more directory and symlinks

Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

rebase and epoch bump

Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

remove

Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/prometheus-alertmanager.yaml
+++ b/prometheus-alertmanager.yaml
@@ -1,8 +1,7 @@
 package:
   name: prometheus-alertmanager
-  # When bumping this version you can remove the `go get` line in the build script
   version: "0.28.1"
-  epoch: 0
+  epoch: 1
   description: Prometheus Alertmanager
   copyright:
     - license: Apache-2.0
@@ -44,6 +43,35 @@ pipeline:
       install -Dm644 examples/ha/alertmanager.yml "${{targets.destdir}}"/etc/alertmanager/alertmanager.yml
 
   - uses: strip
+
+subpackages:
+  - name: ${{package.name}}-bitnami-compat
+    dependencies:
+    description: "compat package with bitnami/alertmanager image"
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.contextdir}}/opt/bitnami/alertmanager/bin/
+          mkdir -p ${{targets.contextdir}}/opt/bitnami/alertmanager/conf/
+          mkdir -p ${{targets.contextdir}}/opt/bitnami/alertmanager/data/
+          mkdir -p ${{targets.contextdir}}/etc/alertmanager
+          mkdir -p ${{targets.contextdir}}/alertmanager
+          chmod g+rwX ${{targets.contextdir}}/opt/bitnami
+          ln -sf /usr/bin/alertmanager ${{targets.contextdir}}/opt/bitnami/alertmanager/bin/alertmanager
+          ln -sf /usr/bin/amtool ${{targets.contextdir}}/opt/bitnami/alertmanager/bin/amtool
+          ln -sf /etc/alertmanager/alertmanager.yml ${{targets.contextdir}}/opt/bitnami/alertmanager/conf/config.yml
+          ln -sf /opt/bitnami/alertmanager/conf ${{targets.contextdir}}/etc/alertmanager
+          ln -sf /opt/bitnami/alertmanager/data ${{targets.contextdir}}/alertmanager
+    test:
+      environment:
+        contents:
+          packages:
+            - ${{package.name}}
+      pipeline:
+        - runs: |
+            /opt/bitnami/alertmanager/bin/alertmanager --version | grep ${{package.version}}
+            /opt/bitnami/alertmanager/bin/alertmanager --help
+            /opt/bitnami/alertmanager/bin/amtool --version | grep ${{package.version}}
+            /opt/bitnami/alertmanager/bin/amtool --help
 
 update:
   enabled: true
