add symlink as well
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/kube-state-metrics.yaml
+++ b/kube-state-metrics.yaml
@@ -41,6 +41,8 @@ subpackages:
         with:
           image: ${{package.name}}
           version-path: 2/debian-12
+      - runs: |
+          ln -sf /usr/bin/kube-state-metrics ${{targets.contextdir}}/opt/bitnami/alertmanager/bin/kube-state-metrics
 
 update:
   enabled: true
