add missed mkdir
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/kube-state-metrics.yaml
+++ b/kube-state-metrics.yaml
@@ -42,6 +42,7 @@ subpackages:
           image: ${{package.name}}
           version-path: 2/debian-12
       - runs: |
+          mkdir -p ${{targets.contextdir}}/opt/bitnami/alertmanager/bin/
           ln -sf /usr/bin/kube-state-metrics ${{targets.contextdir}}/opt/bitnami/alertmanager/bin/kube-state-metrics
 
 update:
