Add the ldd-check test to dhclient (#44165)

--- a/dhclient.yaml
+++ b/dhclient.yaml
@@ -1,7 +1,7 @@
 package:
   name: dhclient
   version: 4.4.3
-  epoch: 1
+  epoch: 2
   description: dhcp client program
   copyright:
     - license: BSD-2-Clause
@@ -66,6 +66,9 @@ update:
 
 test:
   pipeline:
+    - uses: test/tw/ldd-check
+      with:
+        packages: ${{package.name}}
     - runs: |
         dhclient-script --version
         dhclient-script --help
