--- a/git.yaml
+++ b/git.yaml
@@ -1,7 +1,7 @@
 package:
   name: git
   version: "2.48.1"
-  epoch: 0
+  epoch: 1
   description: "distributed version control system"
   copyright:
     - license: GPL-2.0-or-later
@@ -20,6 +20,8 @@ environment:
       - pcre2-dev
       - wolfi-base
       - zlib-dev
+  environment:
+    GCC_SPEC_FILE: openssf-melange.spec
 
 pipeline:
   - uses: fetch
