--- a/aws-c-auth.yaml
+++ b/aws-c-auth.yaml
@@ -53,6 +53,11 @@ subpackages:
       runtime:
         - aws-c-auth
     description: aws-c-auth dev
+    test:
+      pipeline:
+        - uses: test/tw/ldd-check
+          with:
+            packages: ${{subpkg.name}}
 
 test:
   pipeline:
