--- a/simdjson.yaml
+++ b/simdjson.yaml
@@ -1,7 +1,7 @@
 package:
   name: simdjson
   version: "3.12.2"
-  epoch: 0
+  epoch: 1
   description: Parses Gigabytes of JSON per second
   copyright:
     - license: Apache-2.0
@@ -51,6 +51,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/ldd-check
+          with:
+            packages: simdjson-dev
 
 update:
   enabled: true
