chore: add comment on symlink

--- a/mysql-9.1.yaml
+++ b/mysql-9.1.yaml
@@ -202,6 +202,7 @@ subpackages:
           uses: test/daemon-check-output
           with:
             setup: |
+              # remove symlink to /proc/1/fd/1 as it does not work for tests runninig in sudo
               rm -f /opt/bitnami/mysql/logs/mysqld.log
               mkdir -p /bitnami/data/mysql /opt/bitnami/mysql/tmp /opt/bitnami/mysql/run
               chown -fR 1001:0 /bitnami /opt/bitnami/mysql
