worked on comments to enhnace tests and remove unwanted steps

--- a/redis-operator.yaml
+++ b/redis-operator.yaml
@@ -1,25 +1,17 @@
 package:
   name: redis-operator
-  version: "0.18.1"
-  epoch: 1
+  version: "0.19.1"
+  epoch: 0
   description: "A Kubernetes operator to manage Redis clusters"
   copyright:
     - license: Apache-2.0
-
-environment:
-  contents:
-    packages:
-      - build-base
-      - ca-certificates-bundle
-      - wolfi-base
-      - go
 
 pipeline:
   - uses: git-checkout
     with:
       repository: "https://github.com/OT-CONTAINER-KIT/redis-operator.git"
       tag: "v${{package.version}}"
-      expected-commit: "c48c9c5b0d09fb3e3438e269c7b5457585d062c2"
+      expected-commit: "84745ab3155994b8220265930159b4c46e653852"
 
   - uses: go/build
     with:
@@ -28,9 +20,6 @@ pipeline:
       ldflags: "-s -w"
       prefix: "usr"
       install-dir: "bin"
-      tidy: true
-
-  - uses: strip
 
 update:
   enabled: true
@@ -39,7 +28,26 @@ update:
     strip-prefix: "v"
 
 test:
+  environment:
+    environment:
+      KUBERNETES_SERVICE_HOST: "127.0.0.1"
+      KUBERNETES_SERVICE_PORT: 32764
   pipeline:
     - name: "Verify redis-operator binary"
       runs: |
         /usr/bin/manager -help
+    - uses: test/kwok/cluster
+    - uses: test/daemon-check-output
+      with:
+        timeout: 30
+        start: /usr/bin/manager
+        expected_output: |
+          Registering webhook
+          Kind=Redis
+          Kind=RedisCluster
+          Kind=RedisReplication
+          starting manager
+          Starting metrics server
+          Starting webhook server
+          Starting Controller
+          Starting EventSource
