Setting default build to go.mod
Signed-off-by: Anmol Virdi <anmol.virdi@chainguard.dev>

--- a/nats-top.yaml
+++ b/nats-top.yaml
@@ -15,7 +15,7 @@ pipeline:
 
   - uses: go/build
     with:
-      packages: ./nats-top.go
+      packages: .
       output: nats-top
       ldflags: -X main.version=${{package.version}} -X main.commit=$(git rev-parse HEAD) -X main.date=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
 
