Added compat subpackage and removed default flags

--- a/redis-operator.yaml
+++ b/redis-operator.yaml
@@ -17,9 +17,18 @@ pipeline:
     with:
       packages: "."
       output: "manager"
-      ldflags: "-s -w"
-      prefix: "usr"
-      install-dir: "bin"
+
+subpackages:
+  - name: ${{package.name}}-compat
+    pipeline:
+      - runs: |
+          mkdir -p ${{targets.contextdir}}
+          ln -sf /usr/bin/manager ${{targets.contextdir}}/manager
+    description: Compat package for ${{package.name}}
+    test:
+      pipeline:
+        - runs: |
+            stat /manager
 
 update:
   enabled: true
