--- a/ksops.yaml
+++ b/ksops.yaml
@@ -139,3 +139,9 @@ test:
 
         # Cleanup: Remove test files
         rm -f age-key.txt secret.yaml secret.enc.yaml decrypted-secret.yaml .sops.yaml secret-generator.yaml
+
+update:
+  enabled: true
+  github:
+    identifier: viaduct-ai/kustomize-sops
+    strip-prefix: v
