random runtime deps should fail
Signed-off-by: kranurag7 <81210977+kranurag7@users.noreply.github.com>

--- a/yam.yaml
+++ b/yam.yaml
@@ -1,8 +1,13 @@
 package:
   name: yam
   version: "0.2.10"
-  epoch: 0
+  epoch: 2
   description: A sweet little formatter for YAML
+  dependencies:
+    runtime:
+      - bar
+      - baz
+      - foo
   copyright:
     - license: Apache-2.0
 
