--- a/dhclient.yaml
+++ b/dhclient.yaml
@@ -1,7 +1,7 @@
 package:
   name: dhclient
   version: 4.4.3
-  epoch: 2
+  epoch: 20
   description: dhcp client program
   copyright:
     - license: BSD-2-Clause
@@ -9,6 +9,8 @@ package:
     runtime:
       - coreutils
       - iproute2
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -46,15 +48,16 @@ pipeline:
         --with-libbind=no \
         --enable-dhcpv4o6 \
         --enable-paranoia \
-        --enable-log-pid
+        --enable-log-pid  \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
   - uses: autoconf/make-install
 
   - runs: |
-      mkdir -p "${{targets.destdir}}"/sbin
-      install -m755 dhclient-script "${{targets.destdir}}"/sbin
+      mkdir -p "${{targets.destdir}}"/usr/bin
+      install -m755 dhclient-script "${{targets.destdir}}"/usr/bin
       mkdir -p "${{targets.destdir}}"/var/lib/dhcp/
       touch "${{targets.destdir}}"/var/lib/dhcp/dhclient.leases
 
