--- a/iproute2.yaml
+++ b/iproute2.yaml
@@ -1,10 +1,14 @@
 package:
   name: iproute2
   version: "6.13.0"
-  epoch: 0
+  epoch: 20
   description: IP Routing Utilities
   copyright:
     - license: GPL-2.0-or-later
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 capabilities:
   add:
@@ -45,6 +49,8 @@ pipeline:
         CCOPTS="-D_GNU_SOURCE $CFLAGS" LIBDIR=/lib
 
   - uses: autoconf/make-install
+    with:
+      opts: SBINDIR=/usr/bin
 
 subpackages:
   - name: iproute2-doc
@@ -54,6 +60,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
