--- a/keyutils.yaml
+++ b/keyutils.yaml
@@ -1,10 +1,14 @@
 package:
   name: keyutils
   version: 1.6.3
-  epoch: 6
+  epoch: 20
   description: Linux Key Management Utilities
   copyright:
     - license: GPL-2.0-or-later OR LGPL-2.0-or-later
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -40,6 +44,7 @@ pipeline:
         NO_ARLIB=1 \
         LIBDIR=/usr/lib \
         USRLIBDIR=/usr/lib \
+        SBINDIR=/usr/bin \
         install
 
       # Work around a bug in melange with absolute symlinks:
@@ -56,6 +61,8 @@ subpackages:
     dependencies:
       runtime:
         - keyutils-libs
+        - merged-sbin
+        - wolfi-baselayout
     description: keyutils dev
     test:
       pipeline:
@@ -68,6 +75,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: keyutils-libs
     pipeline:
@@ -80,6 +91,10 @@ subpackages:
         - uses: test/ldd-check
           with:
             packages: keyutils-libs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
