--- a/lvm2.yaml
+++ b/lvm2.yaml
@@ -2,10 +2,14 @@
 package:
   name: lvm2
   version: "2.03.31"
-  epoch: 0
+  epoch: 20
   description: Logical Volume Manager 2 utilities
   copyright:
     - license: GPL-2.0-only AND LGPL-2.1-only
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 var-transforms:
   - from: ${{package.version}}
@@ -42,7 +46,7 @@ pipeline:
         --prefix=/usr \
         --sysconfdir=/etc \
         --libdir=/lib \
-        --sbindir=/sbin \
+        --sbindir=/usr/bin \
         --localstatedir=/var \
         --enable-static_link \
         --disable-nls \
@@ -51,17 +55,17 @@ pipeline:
         --with-thin=internal \
         --enable-dmeventd \
         --enable-cmdlib \
-        --with-thin-check=/sbin/thin_check \
+        --with-thin-check=/usr/bin/thin_check \
         --disable-thin_check_needs_check \
-        --with-thin-dump=/sbin/thin_dump \
-        --with-thin-repair=/sbin/thin_repair \
-        --with-thin-restore=/sbin/thin_restore \
-        --with-cache-check=/sbin/cache_check \
+        --with-thin-dump=/usr/bin/thin_dump \
+        --with-thin-repair=/usr/bin/thin_repair \
+        --with-thin-restore=/usr/bin/thin_restore \
+        --with-cache-check=/usr/bin/cache_check \
         --disable-cache_check_needs_check \
-        --with-cache-dump=/sbin/cache_dump \
-        --with-cache-repair=/sbin/cache_repair \
-        --with-cache-restore=/sbin/cache_restore \
-        --with-dmeventd-path=/sbin/dmeventd \
+        --with-cache-dump=/usr/bin/cache_dump \
+        --with-cache-repair=/usr/bin/cache_repair \
+        --with-cache-restore=/usr/bin/cache_restore \
+        --with-dmeventd-path=/usr/bin/dmeventd \
         --without-systemd-run \
         --enable-udev_rules \
         CLDFLAGS="$LDFLAGS"
@@ -77,11 +81,19 @@ subpackages:
     pipeline:
       - uses: split/static
     description: lvm2 static
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: device-mapper-static
     pipeline:
       - uses: split/static
     description: lvm2 static
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: device-mapper-libs
     pipeline:
@@ -93,6 +105,10 @@ subpackages:
         - uses: test/ldd-check
           with:
             packages: $(basename ${{targets.contextdir}})
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: device-mapper-event-libs
     pipeline:
@@ -104,6 +120,10 @@ subpackages:
         - uses: test/ldd-check
           with:
             packages: $(basename ${{targets.contextdir}})
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: lvm2-dev
     pipeline:
@@ -114,6 +134,10 @@ subpackages:
         - uses: test/ldd-check
           with:
             packages: $(basename ${{targets.contextdir}})
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: lvm2-doc
     pipeline:
@@ -122,12 +146,16 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: device-mapper
     pipeline:
       - runs: |
-          mkdir -p ${{targets.subpkgdir}}/sbin
-          mv ${{targets.destdir}}/sbin/dm* ${{targets.subpkgdir}}/sbin
+          mkdir -p ${{targets.subpkgdir}}/usr/bin
+          mv ${{targets.destdir}}/usr/bin/dm* ${{targets.subpkgdir}}/usr/bin
     test:
       pipeline:
         - runs: |
@@ -137,6 +165,10 @@ subpackages:
             dmsetup --help
             dmstats --version
             dmstats --help
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
