--- a/net-tools.yaml
+++ b/net-tools.yaml
@@ -1,10 +1,14 @@
 package:
   name: net-tools
   version: 2.10
-  epoch: 5
+  epoch: 20
   description: "Linux networking base tools"
   copyright:
     - license: GPL-2.0-or-later
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -85,10 +89,6 @@ pipeline:
       for cmd in dnsdomainname domainname hostname ifconfig netstat nisdomainname route ypdomainname; do
         ln -s "../usr/bin/${cmd}" "${{targets.destdir}}/bin/${cmd}"
       done
-      mkdir -p ${{targets.destdir}}/sbin
-      for cmd in arp ipmaddr iptunnel nameif plipconfig rarp slattach; do
-        ln -s "../usr/bin/${cmd}" "${{targets.destdir}}/sbin/${cmd}"
-      done
 
   - uses: strip
 
@@ -100,6 +100,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: "net-tools-dbg"
     description: "net-tools Debug Symbols"
@@ -107,21 +111,23 @@ subpackages:
       - uses: split/debug
     dependencies:
       runtime:
+        - merged-sbin
         - net-tools
+        - wolfi-baselayout
 
   - name: mii-tool
     pipeline:
       - runs: |
           mkdir -p ${{targets.subpkgdir}}/usr/bin
           mv ${{targets.destdir}}/usr/bin/mii-tool ${{targets.subpkgdir}}/usr/bin/mii-tool
-      - name: usrmerge
-        runs: |
-          mkdir -p ${{targets.subpkgdir}}/sbin
-          ln -s ../usr/bin/mii-tool ${{targets.subpkgdir}}/sbin/mii-tool
     test:
       pipeline:
         - runs: |
             mii-tool --version
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
