--- a/shadow.yaml
+++ b/shadow.yaml
@@ -2,10 +2,14 @@
 package:
   name: shadow
   version: "4.17.3"
-  epoch: 0
+  epoch: 20
   description: PAM login and passwd utilities
   copyright:
     - license: BSD-3-Clause
+  dependencies:
+    runtime:
+      - merged-sbin
+      - wolfi-baselayout
 
 environment:
   contents:
@@ -50,7 +54,8 @@ pipeline:
         --with-yescrypt \
         --without-nscd \
         --without-group-name-max-length \
-        --with-fcaps
+        --with-fcaps \
+        --sbindir=/usr/bin
 
   - uses: autoconf/make
 
@@ -97,7 +102,9 @@ subpackages:
       - uses: split/dev
     dependencies:
       runtime:
+        - merged-sbin
         - shadow
+        - wolfi-baselayout
     description: shadow dev
 
   - name: shadow-login
@@ -105,7 +112,7 @@ subpackages:
       - runs: |
           cd ${{targets.destdir}}
           for bin in ${{vars.login-utils}}; do
-            for dir in bin sbin usr/bin usr/sbin; do
+            for dir in bin usr/bin usr/sbin; do
               if [ -e $dir/$bin ] || [ -L $dir/$bin ]; then
                 mkdir -p ${{targets.subpkgdir}}/$dir
                 mv ${{targets.destdir}}/$dir/$bin ${{targets.subpkgdir}}/$dir/
@@ -120,6 +127,10 @@ subpackages:
             nologin --help
             faillog --help
             lastlog --help
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: shadow-doc
     pipeline:
@@ -128,6 +139,10 @@ subpackages:
     test:
       pipeline:
         - uses: test/docs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: shadow-conv
     pipeline:
@@ -144,6 +159,10 @@ subpackages:
             grpunconv --help
             pwconv --help
             pwunconv --help
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
   - name: shadow-subids
     pipeline:
@@ -158,6 +177,10 @@ subpackages:
           mv ${{targets.destdir}}/etc/subuid ${{targets.subpkgdir}}/etc/
           mv ${{targets.destdir}}/etc/subgid ${{targets.subpkgdir}}/etc/
     description: Utilities for using subordinate UIDs and GIDs
+    dependencies:
+      runtime:
+        - merged-sbin
+        - wolfi-baselayout
 
 update:
   enabled: true
