cloudnative-pg: place `manager_<ARCH>` in newly-expected path
Upstream moved their expected installation location to `/operator` in
https://github.com/cloudnative-pg/cloudnative-pg/commit/34ab236e0a442e7bd30b401257824926660d1ae3

We replicate this with a symlink, to avoid breaking any consumers (such
as our tests) which expect `manager_<ARCH>` to be in PATH.

--- a/cloudnative-pg.yaml
+++ b/cloudnative-pg.yaml
@@ -27,7 +27,10 @@ pipeline:
         -X github.com/cloudnative-pg/cloudnative-pg/pkg/versions.buildDate=$(date -u -d "@${SOURCE_DATE_EPOCH:-$(date +%s)}" "+%Y-%m-%dT%H:%M:%SZ")
       packages: ./cmd/manager
 
-  - runs: ln -sf /bin/manager_${{build.goarch}} ${{targets.contextdir}}/manager
+  - runs: |
+      mkdir ${{targets.contextdir}}/operator
+      ln -sf /bin/manager_${{build.goarch}} ${{targets.contextdir}}/operator/
+      ln -sf /bin/manager_${{build.goarch}} ${{targets.contextdir}}/manager
 
 subpackages:
   - name: ${{package.name}}-plugins
