cloudnative-pg: don't install into /bin
Upstream no longer expects the `manager_<ARCH>` binary to be in `/bin`
(the previous commit followed their new expectation of `/operator`), so
we can install into our standard prefix (avoiding any potential for
usrmerge issues).

--- a/cloudnative-pg.yaml
+++ b/cloudnative-pg.yaml
@@ -20,7 +20,6 @@ pipeline:
   - uses: go/build
     with:
       output: manager_${{build.goarch}}
-      prefix: /
       ldflags: |
         -X github.com/cloudnative-pg/cloudnative-pg/pkg/versions.buildVersion=${{package.version}}
         -X github.com/cloudnative-pg/cloudnative-pg/pkg/versions.buildCommit=$(git rev-parse --short=8 HEAD)
@@ -29,8 +28,8 @@ pipeline:
 
   - runs: |
       mkdir ${{targets.contextdir}}/operator
-      ln -sf /bin/manager_${{build.goarch}} ${{targets.contextdir}}/operator/
-      ln -sf /bin/manager_${{build.goarch}} ${{targets.contextdir}}/manager
+      ln -sf /usr/bin/manager_${{build.goarch}} ${{targets.contextdir}}/operator/
+      ln -sf /usr/bin/manager_${{build.goarch}} ${{targets.contextdir}}/manager
 
 subpackages:
   - name: ${{package.name}}-plugins
