Fix docker symlink to docker-init

--- a/docker.yaml
+++ b/docker.yaml
@@ -1,7 +1,7 @@
 package:
   name: docker
   version: "28.0.1"
-  epoch: 0
+  epoch: 1
   description: A meta package for Docker Engine and Docker CLI
   copyright:
     - license: Apache-2.0
@@ -129,7 +129,7 @@ subpackages:
       - runs: |
           install -Dm755 bundles/dynbinary-daemon/docker-proxy ${{targets.destdir}}/usr/bin/docker-proxy
           install -Dm755 bundles/dynbinary-daemon/dockerd ${{targets.destdir}}/usr/bin/dockerd
-          ln -sf /sbin/tini-static ${{targets.destdir}}/usr/bin/docker-init
+          ln -sf /usr/bin/tini-static ${{targets.destdir}}/usr/bin/docker-init
 
   - name: docker-oci-entrypoint
     description: "docker OCI entrypoint"
